k8s/07-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nagp-api
  namespace: nagp
  labels:
    app: nagp-api
    tier: api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nagp-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nagp-api
        tier: api
    spec:
      containers:
        - name: nagp-api
          image: 350358882905.dkr.ecr.ap-south-1.amazonaws.com/test:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
