k8s/08-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nagp-api-service
  namespace: nagp
  labels:
    app: nagp-api
    tier: api
spec:
  selector:
    app: nagp-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
      nodePort: 32418
  type: NodePort
